test/e2e/filters/http_reroute/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8000

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: http-reroute
                      library_path: "/filter.so"
                      plugin_name: http_reroute
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - name: staticreply
                          match:
                            prefix: "/staticreply"
                            headers:
                              - name: "x-upstream-name"
                                exact_match: "staticreply"
                          route:
                            cluster: staticreply

                        - name: root-staticreply
                          match:
                            prefix: "/"
                            headers:
                              - name: "x-upstream-name"
                                exact_match: "staticreply"
                          route:
                            cluster: staticreply

                        - name: root
                          match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Hello, World!"
    - name: staticreply
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: staticreply_route
                  virtual_hosts:
                    - name: staticreply_service_1
                      domains:
                        - staticreply.svc
                      routes:
                        - name: index.staticreply
                          match:
                            prefix: "/"
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: "POST"
                          direct_response:
                            status: 201
                            body:
                              inline_string: "STATICREPLY.svc - 201"
                          response_headers_to_add:
                            - header:
                                key: x-response-host
                                value: staticreply.svc
                            - header:
                                key: x-response-by
                                value: staticreply
                            - header:
                                key: x-response-path-name
                                value: "index"

                    - name: staticreply_service_0
                      domains: ["*"]
                      routes:
                        - name: path.staticreply
                          match:
                            prefix: "/staticreply"
                          direct_response:
                            status: 401
                            body:
                              inline_string: "STATICREPLY - 401"
                          response_headers_to_add:
                            - header:
                                key: x-response-by
                                value: staticreply
                            - header:
                                key: x-response-path-name
                                value: "staticreply"

                        - name: root.staticreply
                          match:
                            prefix: "/"
                          direct_response:
                            status: 400
                            body:
                              inline_string: "STATICREPLY.index - 400"
                          response_headers_to_add:
                            - header:
                                key: x-response-by
                                value: staticreply
                            - header:
                                key: x-response-path-name
                                value: "index"

  clusters:
    - name: staticreply
      connect_timeout: 5000s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: staticreply
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 10001
